2006-05-12  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: set up new filter fields
	* src/Filters/Rules/Person/_RegExpIdOf.py: added
	* src/Filters/Rules/Person/__init__.py: added new files
	* src/Filters/Rules/Person/_HasNoteMatchingSubstringOf.py
	* src/Filters/Rules/Person/_HasBirth.py: use loose_data_cmp
	* src/Filters/Rules/Person/_SearchName.py: search all fields
	* src/Filters/Rules/Person/_HasDeath.py: use loose_data_cmp
	* src/Filters/Rules/Person/_RegExpName.py: added
	* src/Filters/Rules/Person/_MatchIdOf.py: added
	* src/Filters/Rules/Person/_HasNoteRegexp.py: added
	* src/Filters/Rules/Person/Makefile.am: added new files
	* src/Filters/Rules/_RuleUtils.py: added loose_date_cmp

2006-04-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* data/gramps.schemas.in: Swap colors for ToDo and complete. Using
	green is more obvious for complete records.

2006-05-12  Alex Roitman  <shura@gramps-project.org>
	* src/UndoHistory.py (gtk_color_to_str): Better color to str.
	* src/QuestionDialog.py (QuestionDialog2.__init__): Use the
	underline for labels.
	* src/plugins/ChangeNames.py: Fix WM.
	* src/plugins/PatchNames.py: Fix WM.

2006-05-12  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py: fix MonitoredDataType initialization
	* plugins/BookReport.py: append "file://" properly
	* src/GrampsCfg.py: update for selectable colors, default colors
	* src/PeopleModel.py: update for selectable colors
	* data/gramps.schemas.in: update for selectable colors, default colors
	
2006-05-12  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Makefile.am (pkgdata_PYTHON): Add new files.

2006-05-11  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: add additional fields, and build
	filter
	* src/PeopleModel.py: handle both search and filters
	* src/Filters/_GenericFilter.py: import RelLib

2006-05-11  Alex Roitman  <shura@gramps-project.org>
	* src/UndoHistory.py (gtk_color_to_str): Correct byte color.